@@ -10,6 +10,7 @@ plugins {
     id 'application'
     id 'java'
     id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'jacoco'
 }
 
 repositories {
@@ -23,6 +24,16 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // TestFX Core for headless and UI interaction testing
+    testImplementation "org.testfx:testfx-core:4.0.18"
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
+    testImplementation group: 'org.testfx', name: 'testfx-junit5', version: '4.0.18'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
+
+    testImplementation 'org.mockito:mockito-core:4.8.0'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
 
     // This dependency is used by the application.
     implementation libs.guava
@@ -50,15 +61,31 @@ application {
     mainClass = 'io.tamagotchi.App'
 }
 
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
-}
-
 javafx {
     version = "17"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base','javafx.media' ] // Include modules you're using
 }
 
-sourceSets.main.resources.srcDirs = ['src/main/resources']
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
 
+    testLogging {
+        events "PASSED", "SKIPPED", "FAILED"
+        exceptionFormat "full"
+        showStandardStreams = true
+    }
+
+    jvmArgs = [
+            '--module-path', classpath.asPath, // Ensure modules are found
+            '--add-modules', 'javafx.controls,javafx.fxml,javafx.base',
+            '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
+
+sourceSets.main.resources.srcDirs = ['src/main/resources']
